--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -5,6 +5,7 @@ custom:
   basic-cluster-props: &basic-cluster-props
     spark_version: "11.3.x-cpu-ml-scala2.12"
     num_workers: 1
+    node_type_id: 'i3.xlarge'
     # node_type_id: "Standard_E8_v3"
     # init_scripts:
     #   - dbfs:
